--- a/index.html.html
+++ b/index.html.html
@@ -623,7 +623,7 @@
 </head>
 <body>
     <!-- Password Protection Overlay -->
-    <div class="login-overlay" id="loginOverlay">
+    <div class="login-overlay hidden" id="loginOverlay">
         <div class="login-box">
             <h1>🔐 HR Dashboard</h1>
             <p>AKHTER HAMEED KHAN FOUNDATION</p>
